# portfolio_investimentos

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  config.py  database.py  main.py  models.py  requirements.txt  schemas.py
backend/crud/: assets.py  transactions.py
backend/routers/: assets.py  transactions.py
frontend/: Dockerfile  app.py  requirements.txt
